reduce amount of queries to improve business date view hmi performance